# hello-world-dev-tasks-template

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: compose-commit-message.md
ai-dev-tasks/: create-prd.md
hello_world/: manage.py  settings.py  urls.py
hello_world/web/tests/: test_views.py
src/hello_world/: wsgi.py
src/hello_world/web/: urls.py  views.py
src/templates/web/: hello.html
